--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -8,16 +8,22 @@
 }
 </style>
 <style>
-html { 
-  background-color: "; 
-  background-size: cover;
+div class
+{
+margin-top: 25px;
+margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 80px;
 }
-
-body { 
-  color: white; 
+<style>
+{
+margin-top: 25px;
+margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 80px;
 }
 </style>
-<title>CSS Website Layout</title>
+<title>Nellai Varadharaja Perumal Kovil</title>
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
@@ -32,14 +38,14 @@ body {
 h1 {
   color: gold;
   font-family: Lucida Console;
-  font-size: 300%;
+  font-size: 150%;
 text-align: center;
 text-shadow: 2px 2px 4px #000000;
 }
 p  {
   color: white;
   font-family: courier;
-  font-size: 160%;
+  font-size: 90%;
 text-align: center;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -94,7 +100,7 @@ body{
   background-clip: content-box;
 }
 </style>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=1300px" initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .navbar {
@@ -105,7 +111,7 @@ body{
 
 .navbar a {
   float: left;
-  font-size: 16px;
+  font-size: 9px;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -120,7 +126,7 @@ body{
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 9px;  
   border: none;
   outline: none;
   color: white;
@@ -162,11 +168,10 @@ body{
 </style>
 </head>
 <body>
-
 <div class="navbar">
   <a href="index.html">HOME</a>
-  <a href="gal4.html">GALLERY</a>
-<a href="bram.html">BRAMHOSTAVAM</a>
+  <a href="g.html">GALLERY</a>
+<a href="#">BRAMHOSTAVAM</a>
 <a href="#">VIDEOS</a>
 <a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
 <a href="mahapushkaram.html">MAHAPUSHKARAM 2018</a>
@@ -184,6 +189,8 @@ body{
   </div> 
 </div>
 
+</style>
+</style>
 
 
 <style>
@@ -191,7 +198,78 @@ html {
   background-color: green; 
   background-size: cover;
 }
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=1300px" initial-scale=1.0">
+<style>
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+}
+* {
+  box-sizing: border-box;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+}
+
+html {
+  font-family: "Lucida Sans", sans-serif;
+}
+
+.header {
+  background-color: #9933cc;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  padding: 1px;
+  margin-bottom: 9px;
+  background-color: #33b5e5;
+  color: #ffffff;
+  box-shadow: 0 11px 10px rgba(0,0,0,0.12), 0 11px 22px rgba(0,0,0,0.24);
+}
+
+.menu li:hover {
+  background-color: #0099cc;
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+   <a href="l.html"><h1>Live Dharshan</h1></a>
+</div>
+  <head>
+<title>GALLERY</title>
+    <style>
+    #blink{
+      font-size: 25px;
+      font-weight: bold;
+      font-family: sans-serif;
+      color: #ffcc00;
+      transition:0.2s;
+    }
+   </style>
+  </head>
+  <body>
+    <a href="gal.html"> <p id="blink">New Gallery</p></a>
+    <script type="text/javascript">
+      var blink = document.getElementById('blink');
+      setInterval(function() {
+         blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
+      }, 1000); 
+    </script>
+  </body>
 <style>
 body {
   font-family: Verdana, sans-serif;
@@ -214,7 +292,7 @@ body {
 
 .column {
   float: left;
-  width: 25%;
+  width: 55%;
 }
 
 /* The Modal (background) */
@@ -237,7 +315,7 @@ body {
   background-color: #fefefe;
   margin: auto;
   padding: 0;
-  width: 90%;
+  width: 100%;
   max-width: 1200px;
 }
 
