--- a/l.htm
+++ b/l.htm
@@ -219,12 +219,28 @@ html {
       }, 1000); 
     </script>
   </body>
-<h1>live coming soon..</h1>
+<body>
 
-<video width="1000" height="640" autoplay>
+<video id="myVideo" width="320" height="240" controls autoplay>
   <source src="wt.mp4" type="video/mp4">
+  <source src="wt.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
+
+<p>Click the button to find out if the movie automatically started to play as soon as it was ready.</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myVideo").autoplay;
+  document.getElementById("demo").innerHTML = x;
+}
+</script>
+
+</body>
 
 <!-- Footer -->
 .dropdown:hover .dropdown-content {
