--- a/lv.html
+++ b/lv.html
@@ -233,13 +233,13 @@ html {
 }
 
 #main div {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
 }
 </style>
 </head>
 <body>
-
+<h1>LIVE!</h1>
 <h1><video id="myVideo" width="850" height="440" controls autoplay>
   <source src="wt.mp4" type="video/mp4">
   <source src="wt.ogg" type="video/ogg">
@@ -247,20 +247,16 @@ html {
 </video>
 </h1>
 
-<div id="main">
-  <div style="background-color:coral;"></div>
-  <div style="background-color:lightblue;"></div>
-  <div style="background-color:pink;"></div>
-</div>
 
-<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support the align-content property.</p>
+
+
 
 </body>
 </html>
 
 
 
-<p>Click the button to find out if the movie automatically started to play as soon as it was ready.</p>
+<p>Click the button to find out if the live video automatically started to play as soon as it was ready.</p>
 
 <button onclick="myFunction()">Try it</button>
 
