--- a/g.html
+++ b/g.html
@@ -247,7 +247,7 @@ html {
 <body>
 
 <div class="header">
-   <a href="l.html"><h1>Live Dharshan</h1></a>
+   <a href="lv.html"><h1>Live Dharshan</h1></a>
 </div>
   <head>
 <title>GALLERY</title>
