--- a/lv.html
+++ b/lv.html
@@ -246,7 +246,13 @@ html {
   Your browser does not support the video tag.
 </video>
 </h1>
-
+<h2><!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7649406&style=0024&nbdigits=9&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
+</a>
+</h2>
+                                    
+          
 
 
 
