--- a/index.html
+++ b/index.html
@@ -375,6 +375,11 @@ text-align: center;
   <div class="numbertext"></div>
   <img src="sv1.jpeg" style="width:640px;height:380px;">
   <div class="text">Caption Two</div>
+  </div>
+  <div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="r.jpeg" style="width:640px;height:380px;">
+  <div class="text">Caption Two</div>
 </div>
 </div>
 <br>
