--- a/index.html
+++ b/index.html
@@ -381,6 +381,11 @@ text-align: center;
   <img src="r.jpeg" style="width:640px;height:380px;">
   <div class="text">Caption Two</div>
 </div>
+  <div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="r(4).jpeg" style="width:640px;height:380px;">
+  <div class="text">Caption Two</div>
+  </div>
 </div>
 <br>
 
