--- a/contactus.html
+++ b/contactus.html
@@ -298,7 +298,7 @@ html {
 </style>
 </head>
 <body>
-<h1>Google Maps </h1>
+<h1>Google Map </h1>
 <h1> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.514008408663!2d77.71604631453697!3d8.73761099372338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b041186ee1a0f9f%3A0x2a5f32bc98e2fd1b!2sArulmigu%20Varadharaja%20Perumal%20Temple!5e0!3m2!1sen!2sin!4v1588789493997!5m2!1sen!2sin" width="980" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
  </h1>
 
@@ -316,7 +316,7 @@ html {
 
 <!-- Footer -->
 
-}
+
 </style>
 </head>
 <body>
