--- a/index.html
+++ b/index.html
@@ -23,24 +23,19 @@ margin-bottom: 25px;
   margin-left: 80px;
 }
 </style>
-<<title>NELLAI VARADHARAJA PERUMAL KOVIL</title>
+
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<!--Get your own code at fontawesome.com-->
+	<title>NELLAI VARADHARAJA PERUMAL KOVIL</title>
 	<!-- add icon link -->
         <link rel = "icon" href =  
 "<i class='fas fa-gopuram' style='font-size:48px;color:red'></i>" 
         type = "image/x-icon"> 
-<meta name='viewport' content='width=device-width, initial-scale=1'>
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-<!--Get your own code at fontawesome.com-->
 </head>
 <body>
 
-<h1>fas fa-gopuram</h1>
 
-<i class='fas fa-gopuram'></i>
-<i class='fas fa-gopuram' style='font-size:24px'></i>
-<i class='fas fa-gopuram' style='font-size:36px'></i>
-<i class='fas fa-gopuram' style='font-size:48px;color:red'></i>
-<br>
 <!DOCTYPE html> 
 <html> 
 	<head> 
