--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ margin-bottom: 25px;
 		<meta charset = "utf-8" /> 
 		
 		<title> 
-			GeeksforGeeks icon 
+			
 		</title> 
 		
 		<!-- add icon link -->
-		<link rel = "icon" href = 
-"000 (58).jpeg"
+		<link rel = "icon" 
+		      href = "<i class='fas fa-gopuram' style='font-size:24px'>"
 		type = "image/x-icon"> 
 		
 	</head> 
@@ -71,7 +71,7 @@ text-align: center;
 text-shadow: 2px 2px 4px #000000;
 }
 p  {
-  color: white;
+  color: gold;
   font-family: courier;
   font-size: 90%;
 text-align: center;
@@ -275,7 +275,7 @@ html {
 <body>
 
 <div class="header">
-   <a href="lv.html"><h1><i class='fas fa-gopuram' style='font-size:48px;color:gold'></i>Live Dharshan<i class='fas fa-gopuram' style='font-size:48px;color:red'></i></h1></a>
+   <a href="lv.html"><h1><i class='fas fa-gopuram' style='font-size:48px;color:gold'></i>Live Dharshan<i class='fas fa-gopuram' style='font-size:48px;color:gold'></i></h1></a>
 </div>
   <head>
 <title>GALLERY</title>
