--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ text-align: center;
 text-shadow: 2px 2px 4px #000000;
 }
 p  {
-  color: gold;
-  font-family: courier;
+  color: white;
+  font-family: arial;
   font-size: 90%;
 text-align: center;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
