--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ text-shadow: 2px 2px 4px #000000;
 }
 p  {
   color: white;
-  font-family: arial;
+  font-family: courier;
   font-size: 90%;
 text-align: center;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
